
add_subdirectory(asynchronous_echo)
add_subdirectory(auto_concurrency_limiter)
add_subdirectory(backup_request)
add_subdirectory(cancel)
add_subdirectory(cascade_echo)
add_subdirectory(dynamic_partition_echo)
add_subdirectory(echo)
add_subdirectory(grpc)
add_subdirectory(http)
add_subdirectory(memcache)
add_subdirectory(multi_threaded_echo)
add_subdirectory(multi_threaded_echo_fns)
add_subdirectory(nshead_extension)
add_subdirectory(nshead_pb_extension)
add_subdirectory(parallel_echo)
add_subdirectory(partition_echo)
add_subdirectory(redis)
add_subdirectory(selective_echo)
add_subdirectory(session_data_and_thread_local)
add_subdirectory(streaming_echo)